set timeout when eval; do not inherit any context